# SimpleVIO

./: .gitignore  CMakeLists.txt  README.md  windows-build.cmd
config/: euroc_config.yaml
src/: System.cpp  System.h  parameters.cpp  parameters.h
src/backend/: edge_imu.cpp  edge_imu.h  edge_prior.cpp  edge_prior.h  edge_reprojection.cpp  edge_reprojection.h  vertex_inverse_depth.h  vertex_point_xyz.h  vertex_pose.cpp  vertex_pose.h  vertex_speed_bias.h
src/camodocal/calib/: CameraCalibration.cc
src/camodocal/camera_models/: Camera.h  CataCamera.cc  EquidistantCamera.cc  PinholeCamera.cc  ScaramuzzaCamera.cc
src/camodocal/chessboard/: Chessboard.cc
src/camodocal/gpl/: EigenUtils.h  gpl.cc
src/camodocal/sparse_graph/: Transform.h
src/estimator/: estimator.cpp  estimator.h
src/feature/: feature_manager.cpp  feature_manager.h  feature_tracker.cpp  feature_tracker.h
src/imu/: imu_integration.cpp  imu_integration.h  imu_utils.h
src/initialize/: global_sfm.cpp  global_sfm.h  initial_alignment.cpp  initial_alignment.h  initial_ex_rotation.cpp  initial_ex_rotation.h  solve_relative_pose.cpp  solve_relative_pose.h
src/optimize/: base_edge.cpp  base_edge.h  base_vertex.cpp  base_vertex.h  edge.h  loss_function.cpp  loss_function.h  problem.cpp  problem.h  problem_DogLeg.cpp  problem_DogLeg.h  problem_LM_Marquardt.cpp  problem_LM_Marquardt.h  problem_LM_Nielson.cpp  problem_LM_Nielson.h  problem_manager.cpp  vertex.h
src/utils/: eigen_types.h  logger.h  rotation_utils.h  timer.h
test/: run_euroc.cpp  run_generate_data.cpp  test_curve_fitting.cpp  test_mono_ba.cpp
